# kit

./: .bootstrap.toml  .clippy.toml  .development.env  .gitignore  Cargo.toml  DEVLOG.md  README.md  docker-compose-example.yml  docker-compose-log.yml  docker-compose.yml
.github/ISSUE_TEMPLATE/: backlog.md
.github/workflows/: ci.yml
kit-batch/: Cargo.toml
kit-cli/: Cargo.toml
kit-core/: Cargo.toml
kit-core/core-container/: Cargo.toml
kit-core/core-email/: Cargo.toml
kit-core/core-excel/: Cargo.toml
kit-core/core-filter/: Cargo.toml
kit-core/core-guard/: Cargo.toml
kit-core/core-intercepter/: Cargo.toml
kit-core/core-io/: Cargo.toml
kit-core/core-logger/: Cargo.toml
kit-core/core-module/: Cargo.toml
kit-core/core-timestamp/: Cargo.toml
kit-core/kit-cache/: Cargo.toml
kit-core/kit-context/: Cargo.toml
kit-core/kit-event/: Cargo.toml
kit-core/kit-functional/: Cargo.toml
kit-core/kit-http/: Cargo.toml
kit-core/kit-msa/: Cargo.toml
kit-core/kit-router/: Cargo.toml
kit-core/kit-security/: Cargo.toml
kit-docs/: nats.md
kit-gateway/: Cargo.toml
kit-script/: test_all.sh
src/: main.rs  states.rs
src/infrastructure/: mod.rs
src/infrastructure/application/: mod.rs
src/infrastructure/application/bootstrap/: setting.rs
src/infrastructure/database/schema/: table.sql
src/infrastructure/http/: client.rs
src/infrastructure/mq/: config.rs  mod.rs
src/infrastructure/trace/: tracer.rs
src/modules/user/: mod.rs
src/modules/user/core/: mod.rs
src/modules/user/infrastructure/: mod.rs  user_repository.rs  (+1 more)
(+10 files in other folders)
