[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["jeff.cofos@gmail.com"]

[dependencies]
ntex = { version = "2.0", features = ["tokio"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
thiserror = { version = "2.0.12", features = ["default"] }
rabbitmq-stream-client = "*"


[dev-dependencies]


