[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["jeff.cofos@gmail.com"]

[dependencies]
ntex = { version = "2.0", features = ["tokio"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
thiserror = { version = "2.0.12", features = ["default"] }
async-nats = "0.40.0"
bytes = "1.10.1"
fastrace = { version = "0.7", features = ["enable"] }
config = "0.15.11"

reqwest = { version = "0.12.15", features = ["json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
reqwest-middleware-cache = "0.1.1"
tokio = "1.44.2"
mockito = "1.7.0"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.9.3", features = ["std"] }
futures = "0.3.31"

[dev-dependencies]


